--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+            testCompile('org.springframework.boot:spring-boot-starter-test')
+            testCompileOnly 'junit:junit'
 }
 
 test {
